fix package json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-studio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/react-studio",
+  "homepage": "/cs1300-react-bakery",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
